# novationNocturnStudio

./: .gitignore  CHANNEL_STRIP_GUIDE.md  CUBASE_GUIDE.md  pyproject.toml  readme.md  requirements.txt
cubase/Novation/Nocturn Studio/: Novation_Nocturn_Studio.js
cubase/Novation/NocturnStudio/: Novation_NocturnStudio.js
src/nocturn_studio/: main.py  prototype.py
src/nocturn_studio/daw/: midi.py
src/nocturn_studio/engine/: mapper.py
src/nocturn_studio/hardware/: device.py  monitor.py
src/nocturn_studio/model/: control.py  events.py  functional.py  mapping.py
src/nocturn_studio/presets/: SSLChannel.json
src/nocturn_studio/ui/windows/: main_window.py
src/nocturn_studio/utils/: persistence.py
tests/: test_engine.py
