[project]
name = "nocturn-studio"
version = "0.1.0"
description = "Modern macOS application for Novation Nocturn COVID-free control."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.6.0",
    "pyusb>=1.2.1",
    "python-rtmidi>=1.5.8",
    "pyobjc-framework-Cocoa>=12.1",
    "pyobjc-framework-ApplicationServices>=12.1",
]

[project.scripts]
nocturn-studio = "nocturn_studio.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
